deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morpheus-feedback-api
  labels:
    app: morpheus-feedback-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: morpheus-feedback-api
  template:
    metadata:
      labels:
        app: morpheus-feedback-api
    spec:
      imagePullSecrets:
        - name: morpheus-pull-secret
      containers:
        - name: flask-service
          image: quay.io/olavtar/morpheus-feedback-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
        - name: argilla-server
          image: argilla/argilla-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6900
        - name: argilla-worker
          image: argilla/argilla-server:latest
          imagePullPolicy: IfNotPresent
          command: ["bash","-c","python -m argilla_server worker --num-workers $BACKGROUND_NUM_WORKERS"]
        - name: redis
          image: redis:6
          imagePullPolicy: IfNotPresent
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
          imagePullPolicy: IfNotPresent
        - name: postgresql
          image: postgres:13
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: argilla
  labels:
    app: morpheus-feedback-api
spec:
  selector:
    app: morpheus-feedback-api
  ports:
    - protocol: TCP
      port: 6900
      targetPort: 6900
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argilla
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 6900
  to:
    kind: Service
    name: argilla
